master

2.29.5
- Mayhem
  Fix QR filetype checking on /w/.

2.29.4
- Mayhem
  Auto-GIF will not run in /gif/.
  Fix QR filetype checking.

2.29.3
- Mayhem
  Update Quick Reply posting method, this fixes compatibility for uncommon browsers such as
    Opera Mobile 12 and Luakit for example.

2.29.2
- Mayhem
  Add HTTPS support.
  Ban support improvements and fixes.

2.29.1
- Mayhem
  Update posting support to use https with sys.4chan.org according to 4chan's latest change. This fixes the 'referer' error.
  Update redirection to installgentoo's archives.

2.29.0
- Mayhem
  New feature: Quote Resurrection, automatically linkifying dead quotes to archives.

2.28.1
- Mayhem
  General performance improvements.
  Threads will now be updated instantly after posting through the QR.
  Your own posts will not count toward the unread count after posting through the QR.
  Performance issues are now lessened with QR thumbnails of high-res pictures.
  You can now use Shift+Click on the file input to remove the selected reply's file.
  Reply navigation keybinds will now scroll as you navigate.
- noface
  Add unique ID to filter.

2.28.0
- ahodesuka
  Reply/Thread File Info Formatting:
    - Link: %l, %L (Original file names are shown inside threads).
    - Size: %B (Bytes), %K (KB), %M (MB), %s (4chan default).
    - Resolution/PDF: %r
    - Original filename: %n, %N.
- noface
  Update imagelimit for /mlp/.
  Fix stubs if poster has unique ID.
- Mayhem
  You can now filter or highlight admin/mod posts.
  New sauce parameter. $4: Current board.

2.27.1
- Mayhem
  Fix stubs with the new filter.
  Fix mail filtering.
  The MD5 will now check for exact string matching, it will not use regular expressions.

2.27.0
- aeosynth / ahodesuka
  new option: expand images from current position
- ahodesuka
  Add Open Reply in New Tab option for replies made from the main board (not dumping).
  Scroll back up (top of anchor - 42px) when unexpanding images.
- Mayhem