@@ -2869,8 +2869,6 @@ Redirect =
         "http://fuuka.warosu.org/#{board}/#{mode}/#{id}"
       when 'diy', 'g', 'sci'
         "https://archive.installgentoo.net/#{board}/#{mode}/#{id}"
-      when '3', 'adv', 'an', 'ck', 'co', 'fa', 'fit', 'int', 'k', 'mu', 'n', 'o', 'p', 'po', 'pol', 'r9k', 'soc', 'sp', 'toy', 'trv', 'vp', 'x'
-        "http://archive.no-ip.org/#{board}/#{mode}/#{id}"
       else
         if mode is 'thread'
           "//boards.4chan.org/#{board}/"
