@@ -1,4 +1,6 @@
 master
+- Mayhem
+  Remove archive.no-ip.org archive redirections.
 
 2.29.5
 - Mayhem
